fix: issues spotted by sonar, indentation